fix footer breaking on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,7 +116,7 @@ li {
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 900px) {
   .footer {
     display: none;
   }
